objects/ssot__PresentationLinkedPage__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivationDateTime__c</fullName>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeactivationDateTime__c</fullName>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Presentation Linked Page Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalPrstLinkedPageId__c</fullName>
        <label>Original Presentation Linked Page</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationId__c</fullName>
        <label>Presentation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationPageId__c</fullName>
        <label>Presentation Page</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800702871_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationLinkedPage_OriginalPrstL_rel</label>
        <referenceTo>ssot__PresentationLinkedPage__dlm</referenceTo>
        <relationshipLabel>PresentationLinkedPage_OriginalPrstL_rel</relationshipLabel>
        <relationshipName>rel_1752800702871_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800703784_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationLinkedPage_PresentationP_rel</label>
        <referenceTo>ssot__PresentationPage__dlm</referenceTo>
        <relationshipLabel>PresentationLinkedPage_PresentationP_rel</relationshipLabel>
        <relationshipName>rel_1752800703784_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>